--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,25 @@
-# backend/Dockerfile
 FROM python:3.11-slim
-
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
+# Install PostgreSQL client
+RUN apt-get update && apt-get install -y \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy project files
 COPY . .
 
-# collectstatic / migrations can be run via entrypoint or docker-compose command
-CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000"]
+# Collect static files
+RUN python manage.py collectstatic --noinput || true
+
+# Expose port
+EXPOSE 8000
+
+# Run migrations and start Gunicorn
+CMD python manage.py migrate && \
+    gunicorn core.wsgi:application --bind 0.0.0.0:8000
