--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "three": "^0.181.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -25,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
